--- a/RayTracing/imgui.ini
+++ b/RayTracing/imgui.ini
@@ -19,19 +19,27 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=1198,26
-Size=722,965
+Pos=1290,483
+Size=630,508
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Viewport]
 Pos=0,26
-Size=1196,965
+Size=1288,965
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Scene]
+Pos=1290,26
+Size=630,455
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=0,55 Size=1920,965 Split=X
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=876,983 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=722,983 Selected=0x54723243
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=0,55 Size=1920,965 Split=X
+  DockNode    ID=0x00000001 Parent=0xF2944C7F SizeRef=1288,983 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0xF2944C7F SizeRef=630,983 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=630,455 Selected=0xE192E354
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=630,508 Selected=0x54723243
 
